--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <script src="js/munition.js"></script>
     <link rel="stylesheet" href="css/master.css">
   </head>
+
   <body>
 
     <div>
+
+      <canvas width=1200 height=600 id="canvasTankillaBackGround"></canvas>
       <canvas width=1200 height=600 id="canvasTankilla"></canvas>
     </div>
     <div>
       <canvas width=1200 height=50 id="canvasWeapon"></canvas>
     </div>
   </body>
+
 </html>
